--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "dexie": "^4.0.11",
     "fabric": "^6.7.0",
     "jotai": "^2.12.5",
-    "konva": "^9.3.22",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-konva": "^19.0.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
