--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dexie": "^4.0.11",
     "fabric": "^6.7.0",
     "jotai": "^2.12.5",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
